[gd_scene load_steps=33 format=2]

[ext_resource path="res://dudes/Mammoth/Mammoth.tscn" type="PackedScene" id=1]
[ext_resource path="res://dudes/MechMammoth/MechMammoth.gd" type="Script" id=2]
[ext_resource path="res://assets/units/MechMammut/Back/Walk_0001.png" type="Texture" id=3]
[ext_resource path="res://assets/units/MechMammut/Back/Walk_0002.png" type="Texture" id=4]
[ext_resource path="res://assets/units/MechMammut/Front/Blue/Walk_0002.png" type="Texture" id=5]
[ext_resource path="res://assets/units/MechMammut/Front/red/Walk_0001.png" type="Texture" id=6]
[ext_resource path="res://assets/units/MechMammut/Front/red/Walk_0002.png" type="Texture" id=7]
[ext_resource path="res://assets/units/MechMammut/Front/Blue/Walk_0001.png" type="Texture" id=8]
[ext_resource path="res://assets/units/MechMammut/Right/Red/Walk_0002.png" type="Texture" id=9]
[ext_resource path="res://assets/units/MechMammut/Right/Blue/Walk_0001.png" type="Texture" id=10]
[ext_resource path="res://assets/units/MechMammut/Right/Blue/Walk_0002.png" type="Texture" id=11]
[ext_resource path="res://assets/units/MechMammut/Right/Red/Walk_0001.png" type="Texture" id=12]
[ext_resource path="res://assets/units/MechMammut/Right/shoot_0003.png" type="Texture" id=13]
[ext_resource path="res://assets/units/MechMammut/Right/shoot_0002.png" type="Texture" id=14]
[ext_resource path="res://assets/units/MechMammut/Right/shoot_0001.png" type="Texture" id=15]
[ext_resource path="res://assets/units/MechMammut/Back/shoot_0001.png" type="Texture" id=16]
[ext_resource path="res://assets/units/MechMammut/Back/shoot_0002.png" type="Texture" id=17]
[ext_resource path="res://assets/units/MechMammut/Back/shoot_0003.png" type="Texture" id=18]
[ext_resource path="res://assets/units/MechMammut/Front/Shoot_0001.png" type="Texture" id=19]
[ext_resource path="res://assets/units/MechMammut/Front/Shoot_0002.png" type="Texture" id=20]
[ext_resource path="res://assets/units/MechMammut/Front/Shoot_0003.png" type="Texture" id=21]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 14 ), ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 197.043, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 176.116 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="MechMammoth" instance=ExtResource( 1 )]
script = ExtResource( 2 )
regular_sprites_front = SubResource( 5 )
enemy_sprites_front = SubResource( 6 )
regular_sprites_back = SubResource( 3 )
enemy_sprites_back = SubResource( 4 )
max_health = 50
movement_speed = 20
castle_damage = 30
regular_sprites = SubResource( 7 )
enemy_sprites = SubResource( 8 )

[node name="Position2D" type="Position2D" parent="AnimatedSprite2" index="0"]
position = Vector2( -0.841843, -11.1818 )

[node name="Position2D" type="Position2D" parent="AnimatedSprite3" index="0"]
position = Vector2( -0.264862, -31.519 )

[node name="Position2D" parent="AnimatedSprite" index="0"]
position = Vector2( 15.2372, -25.5537 )

[node name="Shoot" type="AnimatedSprite" parent="AnimatedSprite" index="4"]
visible = false
frames = SubResource( 9 )

[node name="CollisionShape2D" parent="Range" index="0"]
position = Vector2( 187.043, 0 )
shape = SubResource( 1 )

[node name="RangeUp" type="Area2D" parent="." index="10"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeUp" index="0"]
position = Vector2( 0, -166.116 )
shape = SubResource( 2 )

[node name="ShootBack" type="AnimatedSprite" parent="." index="11"]
visible = false
frames = SubResource( 10 )

[node name="ShootFront" type="AnimatedSprite" parent="." index="12"]
visible = false
frames = SubResource( 11 )

[connection signal="animation_finished" from="AnimatedSprite/Shoot" to="." method="_on_Shoot_animation_finished"]
[connection signal="area_entered" from="RangeUp" to="." method="_on_RangeUp_area_entered"]
[connection signal="animation_finished" from="ShootBack" to="." method="_on_ShootBack_animation_finished"]
[connection signal="animation_finished" from="ShootFront" to="." method="_on_ShootFront_animation_finished"]
